# cracker

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  README.md  justfile  pyproject.toml
.omc/state/: agent-replay-8a979b06-fe2d-4acd-95da-c1e42f4091dc.jsonl
scripts/: analyze_payloads.py  find_attacker.py  injection_surprise.py  line_anomaly.py  prior_mismatch.py
src/benchmarks/: scenario_factory.py
src/cracker/: __init__.py  attacker.py  backends.py  benchmark_runner.py  cli.py  config.py  cracker_loop.py  http_server.py  malicious_tasks.py  poisoner.py  prompts.py  scenario.py  scenario_v2.py
src/cracker/attacks/: __init__.py  base.py  file.py  skill.py  tool.py
src/cracker/scenarios/: __init__.py  code_review.py  customer_support.py  data_analysis.py  devops_deploy.py  file_processing.py  research_report.py  skill_inject.py  summarization.py  tool.py  tool_fetch.py  web_api.py
src/cracker/scenarios/file/: __init__.py  build_script.py  config_pipeline.py  index_lookup.py  manifest_processing.py  naive_injection.py
src/cracker/scenarios/v2/: __init__.py  code_review.py  data_analysis.py  file_processing.py  summarization.py  web_api.py
